--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,15 @@
 sudo: false
-
 language: node_js
-
 node_js:
-  - '8'
-  - '7'
-  - '6'
-
+- '8'
+- '7'
+- '6'
 before_script:
-  - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
-
+- export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 install:
-  - npm install
-
+- npm install
 script:
-  - npm run lint
-  - npm test
+# - npm run lint
+- npm test
+- npm run private:build:linux
+- npm run build
