--- a/package.json
+++ b/package.json
@@ -60,6 +60,15 @@
     "private:watch": "npm run private:compile -- --source-maps true --watch --skip-initial-build",
     "private:serve": "babel-node scripts/serve.js",
     "private:compile": "babel app/ --copy-files --out-dir build",
-    "private:clean": "rimraf build"
-  }
+    "private:clean": "rimraf build",
+	"buildLinux" : "electron-builder --publish always"
+  },
+       "build": {
+         "publish": [{
+             "provider": "github",
+             "owner": "zuhxz",
+             "repo": "electron-react-redux-boilerplate"
+         }]
+      
+     }
 }
