--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ sudo: false
 language: node_js
 node_js:
 - '8'
-- '7'
-- '6'
+# - '7'
+# - '6'
 before_script:
 - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 install:
@@ -11,5 +11,5 @@ install:
 script:
 # - npm run lint
 - npm test
-- npm run private:build:linux
-- npm run build
+- npm run pack:linux
+# - npm run build
