--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "electron-react-redux-boilerplate",
+  "name": "electron-react-redux",
   "version": "0.0.0",
-  "description": "electron-react-redux-boilerplate",
+  "description": "electron-react-redux",
   "main": "init.js",
   "author": {
     "name": "Jordan Schroter",
     "email": "email@author.com"
   },
-  "repository": "https://github.com/jschr/electron-react-redux-boilerplate",
+  "repository": "https://github.com/zuhxz/electron-react-redux",
   "license": "MIT",
   "dependencies": {
     "babel-runtime": "^6.22.0",
@@ -67,7 +67,7 @@
          "publish": [{
              "provider": "github",
              "owner": "zuhxz",
-             "repo": "electron-react-redux-boilerplate"
+             "repo": "electron-react-redux"
          }]
       
      }
